--- a/searchdialog_base.ui
+++ b/searchdialog_base.ui
@@ -288,6 +288,13 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="mNumItems">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
