--- a/timescaleedit_base.ui
+++ b/timescaleedit_base.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>TimeScaleEditDialog</class>
- <widget class="QDialog" name="TimeScaleEditDialog" >
+ <class>TimeScaleEditWidget</class>
+ <widget class="QWidget" name="TimeScaleEditWidget" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -8,9 +8,6 @@
     <width>400</width>
     <height>320</height>
    </rect>
-  </property>
-  <property name="windowTitle" >
-   <string>Timezone</string>
   </property>
   <layout class="QVBoxLayout" >
    <item>
@@ -65,37 +62,6 @@
         </spacer>
        </item>
       </layout>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" >
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
-        <string>&amp;OK</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
-        <string>&amp;Cancel</string>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
