--- a/incidenceeditor/koeditoralarms_base.ui
+++ b/incidenceeditor/koeditoralarms_base.ui
@@ -545,7 +545,7 @@
             <property name="toolTip">
              <string>Specify a list of addresses to send email when the reminder triggers.
 If the 'To:' field stays empty the email reminder will be sent to the
-default email configured in Kmail (Settings menu/Configure Kmail/Idnetities).</string>
+default email configured in Kmail (Settings menu/Configure Kmail/Identities).</string>
             </property>
             <property name="whatsThis">
              <string>Enter a list comma-sepatered addresses where an email will be sent when the reminder triggers</string>
