--- a/koeditoralarms_base.ui
+++ b/koeditoralarms_base.ui
@@ -45,6 +45,12 @@
                             <property name="name">
                                 <cstring>mAlarmOffset</cstring>
                             </property>
+                            <property name="maxValue">
+                                <number>99999</number>
+                            </property>
+                            <property name="minValue">
+                                <number>1</number>
+                            </property>
                             <property name="sizePolicy">
                                 <sizepolicy>
                                     <hsizetype>4</hsizetype>
