--- a/incidenceeditor/koeditoralarms_base.ui
+++ b/incidenceeditor/koeditoralarms_base.ui
@@ -61,7 +61,7 @@
            <number>1</number>
           </property>
           <property name="maximum">
-           <number>999999999</number>
+           <number>99999</number>
           </property>
          </widget>
         </item>
