Add context to the "&Add" string.
This is necessary because "&Add" is in multiple catalogs,
with different meanings. For example, in German, it is
sometimes translated as "Neu" and sometimes as "Hinzufügen".

MERGE: trunk (but there, it is probably possible to keep the
              string in the UI file)
Part of kolab/issue4264

svn path=/branches/kdepim/enterprise/kdepim/; revision=1122624

--- a/koeditoralarms_base.ui
+++ b/koeditoralarms_base.ui
@@ -387,7 +387,7 @@
                                     <cstring>mSoundFile</cstring>
                                 </property>
                                 <property name="filter">
-					<string>audio/x-wav audio/x-mp3 application/ogg</string>
+                                    <string>audio/x-wav audio/x-mp3 application/ogg</string>
                                 </property>
                             </widget>
                             <spacer>
@@ -549,7 +549,7 @@
                         <cstring>mAddButton</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Add</string>
+                        <string></string>
                     </property>
                 </widget>
                 <widget class="QPushButton" row="1" column="1">
