Switching KOrganizer from its internal incidence editors to the extracted lib kdepim/incidenceeditors
svn path=/trunk/KDE/kdepim/; revision=1124077

--- a/categoryeditdialog_base.ui
+++ b/categoryeditdialog_base.ui
@@ -104,7 +104,7 @@
     </layout>
    </item>
    <item row="0" column="0" >
-    <widget class="AutoCheckTreeWidget" name="mCategories" >
+    <widget class="IncidenceEditors::AutoCheckTreeWidget" name="mCategories" >
      <property name="toolTip" >
       <string>Category list</string>
      </property>
@@ -147,7 +147,7 @@
    <header>kpushbutton.h</header>
   </customwidget>
   <customwidget>
-   <class>AutoCheckTreeWidget</class>
+   <class>IncidenceEditors::AutoCheckTreeWidget</class>
    <extends>QTreeWidget</extends>
    <header>autochecktreewidget.h</header>
   </customwidget>
