Fix string, no dialog opened here, so remove "..."
kolab/issue4264

svn path=/branches/kdepim/enterprise/kdepim/; revision=1128789

--- a/koeditoralarms_base.ui
+++ b/koeditoralarms_base.ui
@@ -541,7 +541,7 @@
                         <cstring>mRemoveButton</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Remove...</string>
+                        <string>&amp;Remove</string>
                     </property>
                 </widget>
                 <widget class="QPushButton" row="0" column="1">
