--- a/searchdialog_base.ui
+++ b/searchdialog_base.ui
@@ -15,7 +15,7 @@
   <property name="windowTitle">
    <string>Find Events - KOrganizer</string>
   </property>
-  <layout class="QFormLayout" name="formLayout_2">
+  <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
@@ -280,6 +280,12 @@
    </item>
    <item row="3" column="0" colspan="2">
     <widget class="QFrame" name="mListViewFrame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
