--- a/printing/calprintweekconfig_base.ui
+++ b/printing/calprintweekconfig_base.ui
@@ -73,7 +73,7 @@ p, li { white-space: pre-wrap; }
        </widget>
       </item>
       <item row="0" column="1" >
-       <widget class="KPIM::KDateEdit" name="mFromDate" >
+       <widget class="KDateComboBox" name="mFromDate" >
         <property name="focusPolicy" >
          <enum>Qt::StrongFocus</enum>
         </property>
@@ -164,7 +164,7 @@ p, li { white-space: pre-wrap; }
        </widget>
       </item>
       <item row="1" column="1" >
-       <widget class="KPIM::KDateEdit" name="mToDate" >
+       <widget class="KDateComboBox" name="mToDate" >
         <property name="focusPolicy" >
          <enum>Qt::StrongFocus</enum>
         </property>
@@ -366,9 +366,9 @@ p, li { white-space: pre-wrap; }
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KPIM::KDateEdit</class>
+   <class>KDateComboBox</class>
    <extends>QComboBox</extends>
-   <header>libkdepim/kdateedit.h</header>
+   <header>kdatecombobox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
